# metagenome_vector_sketches_codex

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/: random_projection.h  read_pc_mat.h
src/: bindings.cpp  clusters.py  compute_error_of_random_projections.py  convert_to_zarr.cpp  interpret_pairwise_comp.py  jaccard.py  pairwise_comp_optimized.cpp  project_everything.cpp  query_ava_matrix.cpp  query_pc_mat.cpp  random_projection.cpp  read_pc_mat.cpp  read_pc_mat.py  read_pc_mat_cmp.cpp  standalone_projection.cpp
test/: query_strs.txt
